--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ terraform.rc
 
 # Node
 node_modules/
+build/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
