--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,19 +5,20 @@ phases:
     runtime-versions:
       nodejs: 16
     commands:
-      - npm install -g npm@latest
-  pre_build:
-    commands:
+      - cd react-app
       - npm install
+
   build:
     commands:
       - npm run build
+      - cd build
+      - aws s3 sync . s3://${S3_BUCKET} --delete
+
   post_build:
     commands:
-      - aws s3 sync build/ s3://$S3_BUCKET/ --delete
-      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
+      - aws cloudfront create-invalidation --distribution-id ${CLOUDFRONT_DISTRIBUTION_ID} --paths "/*"
 
 artifacts:
   files:
     - '**/*'
-  base-directory: 'build' 
+  base-directory: 'react-app/build' 
